# iter_model

./: .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini
.github/: RELEASE-TEMPLATE.md
.github/workflows/: build.yml  deploy-docs.yml  publish.yml  python-package.yml  release.yml
async_iter/: index.html
changelog/: index.html
docs/: async_iter.md  changelog.md  generators_usage.md  index.md  sync_iter.md
generators_usage/: index.html
iter_model/: __init__.py  __init__.pyi  async_iter.py  async_iter.pyi  async_utils.py  async_utils.pyi  empty_iterator.py  empty_iterator.pyi  sync_iter.py  sync_iter.pyi
sync_iter/: index.html
test/: __init__.py
tests/: utils.py
tests/test_iter_model/: test_async_iter.py  test_sync_iter.py
