[tool.poetry]
name = "iter_model"
version = "2.0.0"
description = "iter-model uses a method approach instead of individual functions to work with iterable objects."
authors = ["volodymyrb <volodymyr.borysiuk0@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://volodymyrbor.github.io/iter_model/"
repository = "https://github.com/VolodymyrBor/iter_model"
documentation = "https://volodymyrbor.github.io/iter_model/"
keywords = ["iterator", "iterable"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = ">=4.0.1,<5.0.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.1.1"
pytest-mypy = "^0.9.1"
mkdocs-material = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    {include = "iter_model"},
]
